# nanopore-it

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  analysis.py  app.py  cusumv3.py  pyproject.toml
.github/: copilot-instructions.md
.streamlit/: config.toml
app/: __init__.py  event_analysis_tab.py  event_filter_tab.py  scalogram_tab.py
nanopore_it/: __init__.py  analysis.py  auto_detect_clears.py  cusumv3.py  utils.py
